fix whitespace

--- a/JSDemos/Demos/Common/EditorAppearanceVariants/jQuery/styles.css
+++ b/JSDemos/Demos/Common/EditorAppearanceVariants/jQuery/styles.css
@@ -73,8 +73,11 @@
   font-weight: 500;
 }
 
+.editors-modes {
+  display: flex;
+}
+
 .option {
-  display: inline-block;
   padding-right: 20px;
   margin-top: 20px;
 }
